--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
                     <li><img src="img/main_03.png" alt=""></li>
                 </ul>
             </div>
-            <ul class="header-utility">
+            <!-- <ul class="header-utility">
                 <li> <a href="2023naturalbeat_1203.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
-            </ul>
+            </ul> -->
         </header>
         <main>
             <section id="concept" class="inner">
@@ -151,9 +151,9 @@
                             <div class="card border border-warning shadow">
                                 <img src="img/women02.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h4 class="card-title">satsuki</h4>
+                                    <h4 class="card-title">Satsuki</h4>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Satsuki Inoue</li>
+                                        <li class="list-group-item">Satsuki</li>
                                         <li class="list-group-item">Koto</li>
                                         <li class="list-group-item">(一社)TORIHADA LABO副代表<br> 箏曲生田流宮城社大師範<br> 宮崎県宮崎市出身<br>
                                         </li>
@@ -196,7 +196,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">衛藤和洋</h4>
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item">Yusuke Yanagita</li>
+                                        <li class="list-group-item">Kazuhiro Etou</li>
                                         <li class="list-group-item">Percussion</li>
                                         <li class="list-group-item">島村楽器宮崎店ドラム科講師<br>宮崎市かのう児童センター館長<br> 宮崎県日南市出身</li>
                                         <li class="list-group-item">子ども向けイベント出演歴<br> 宮崎県立芸術劇場主催おんがくのおもちゃ箱シリーズおとのたねバンド編<br> 国民文化祭「子どもと楽しむミュージックデイ」
@@ -221,7 +221,7 @@
                 <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                 <li><a href="babyjazz.html">BABY JAZZ</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
+                <!-- <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li> -->
                 <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                 <li><a href="inquiry.html">お問い合わせ</a></li>
             </ul>
@@ -260,7 +260,7 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
+                    <!-- <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li> -->
                     <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
