--- a/babyjazz.html
+++ b/babyjazz.html
@@ -72,9 +72,9 @@
                     <li><img src="img/main_03.png" alt=""></li>
                 </ul>
             </div>
-            <ul class="header-utility">
+            <!-- <ul class="header-utility">
                 <li> <a href="2023naturalbeat_1203.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
-            </ul>
+            </ul> -->
         </header>
         <main>
             <section id="concept" class="inner">
@@ -234,7 +234,7 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
+                    <!-- <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li> -->
                     <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
@@ -274,7 +274,7 @@
                             <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                             <li><a href="babyjazz.html">BABY JAZZ</a></li>
                             <li><a href="news.html">NEWS</a></li>
-                            <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li>
+                            <!-- <li><a href="2023naturalbeat_1203.html">2023 Natural Beat</a></li> -->
                             <li><a href="music_distribution.html">CD Album “Baby Jazz”購入</a></li>
                             <li><a href="inquiry.html">お問い合わせ</a></li>
                         </ul>
