--- a/passed/2021naturalbeat_1205.html
+++ b/passed/2021naturalbeat_1205.html
@@ -71,9 +71,9 @@
                     <li><img src="img/main_03.png" alt=""></li>
                 </ul>
             </div>
-            <ul class="header-utility">
+            <!-- <ul class="header-utility">
                 <li> <a href="2023naturalbeat_1203.html" style="font-family: 'Dancing Script', cursive; font-size: 1.3rem;">Natural Beat GO!</a> </li>
-            </ul>
+            </ul> -->
         </header>
         <div class="openbtn">
             <div class="openbtn-area"><span></span><span></span><span></span></div>
@@ -86,7 +86,7 @@
                     <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                     <li><a href="babyjazz.html">BABY JAZZ</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="2023naturalbeat_1203.html">EVENT</a></li>
+                    <!-- <li><a href="2023naturalbeat_1203.html">EVENT</a></li> -->
                     <li><a href="inquiry.html">お問い合わせ</a></li>
                 </ul>
             </div>
@@ -187,7 +187,7 @@
                         <li><a href="torihada.html">TORIHADA LABOとは</a></li>
                         <li><a href="babyjazz.html">BABY JAZZ</a></li>
                         <li><a href="news.html">NEWS</a></li>
-                        <li><a href="2023naturalbeat_1203.html">EVENT</a></li>
+                        <!-- <li><a href="2023naturalbeat_1203.html">EVENT</a></li> -->
                         <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
                     <!--/footer-sitemap-->
